<resources>
    <string name="app_name">바른글씨</string>
    <string name="noText">NoText</string>
    <string name="kakao_api_key">ba9b634a31af67fc0892b3f9adfe653a</string>
    <string name="kakao_api_key2">kakaoba9b634a31af67fc0892b3f9adfe653a</string>
    <string name="login_text">나를 위한 바른 글씨 교정기</string>
    <string name="login_permission1">권한이 거절됨(추가입력)</string>
    <string name="login_permission2">권한이 다시묻지않기 설정됨(추가입력)</string>
    <string name="login_kakaologin">카카오 로그인 버튼</string>
    <string name="grammertest_menu">맞춤법 검사</string>
    <string name="grammertest_title">손글씨를 촬영해 주세요</string>
    <string name="grammertest_folderName">.picture</string>
    <string name="grammertest_fileName">imageFile.jpg</string>
    <string name="grammertest_popupOCR_main">인식 결과</string>
    <string name="grammertest_popupOCR_content">이렇게 적으신 것이 맞나요?</string>
    <string name="grammertest_popupOCR_yes">맞아요</string>
    <string name="grammertest_popupOCR_no">아니에요</string>
    <string name="grammertest_popupOCR_main2">글씨 수정</string>
    <string name="grammertest_popupOCR_content2">적은 대로 글을 수정해 주세요.</string>
    <string name="grammertest_popupOCR_yes2">확인</string>
    <string name="grammertest_popupOCR_no2">취소</string>
    <string name="grammertest_popupResult_main">맞춤법 검사 결과</string>
    <string name="grammertest_popupResult_ok">확인</string>
    <string name="grammertest_popupResult_bookmark">책갈피에 넣기</string>
    <string name="quiz_menu">퀴즈</string>
    <string name="quiz_menu_goto_quizwriting">손글씨 단어 퀴즈</string>
    <string name="quiz_menu_goto_quizgrammer">우리말 맞춤법 퀴즈</string>
    <string name="quiz_menu_goto_rank">종합 랭킹 보기</string>
    <string name="quiz_count">%1$d/10</string>
    <string name="quiz_writing_main">다음 설명에 해당하는 단어를\n손으로 쓰고\n촬영하세요</string>
    <string name="quiz_grammer_main">다음 중 올바르게\n맞춤법을\n따르는 문장을 고르세요</string>
    <string name="quiz_popup_next_correct">정답입니다!</string>
    <string name="quiz_popup_next_incorrect">틀렸습니다!</string>
    <string name="quiz_popup_next_answer">정답</string>
    <string name="quiz_popup_score">+%1$d점\n현재까지 획득한 점수</string>
    <string name="quiz_popup_score2">%1$d점</string>
    <string name="quiz_popup_next_next">다음 문제</string>
    <string name="quiz_popup_next_end">끝내기</string>
    <string name="quiz_popup_back_header">게임을 마치시겠습니까?</string>
    <string name="quiz_popup_back_body">여기서 마치시게 되면\n풀었던 문제 까지만\n점수를 획득하고 퀴즈 선택화면으로\n돌아가게 됩니다.</string>
    <string name="quiz_popup_back_continue">계속 하기</string>
    <string name="quiz_result_main_grammertest">우리말 맞춤법 퀴즈</string>
    <string name="quiz_result_main_writingtest">손글씨 단어 퀴즈</string>
    <string name="quiz_result_result">게임 결과</string>
    <string name="quiz_result_count">맞춘 문제 %1$d개\n틀린 문제 %2$d개\n획득한 점수 %3$d점\n누적 점수 %4$d점</string>
    <string name="quiz_result_goto_rank">종합 랭킹 보기</string>
    <string name="quiz_result_goto_quiz">퀴즈 선택화면으로 돌아가기</string>
    <string name="quiz_rank_menu">랭킹</string>
    <string name="mypage_menu">마이페이지</string>
    <string name="mypage_list">책갈피</string>
    <string name="mypage_bookmark_unbookmark">책갈피\n해제하기</string>
    <string name="setting_menu">앱 설정</string>
    <string name="setting_title_2">앱 정보</string>
    <string name="setting_btn_logout">로그아웃</string>
    <string name="setting_textSize">글씨 크기</string>
    <string name="setting_textExample">다람쥐의 쳇바퀴는 어째서 헐었나</string>
    <string name="setting_seekbar_left">작게</string>
    <string name="setting_seekbar_right">크게</string>
    <string name="setting_theme_name">앱 테마</string>
    <string name="setting_theme_contents">앱의 테마를 설정합니다.</string>
    <string name="setting_anime_name">화면 전환 효과</string>
    <string name="setting_anime_contents">전환 애니메이션을 켜고 끕니다.</string>
    <string name="setting_btn">앱 정보 보기</string>
    <string name="setting2_text">"앱 이름
바른 글씨

앱 버전
0.13ver

개발팀
Team import 세종

사용 API
Kakao Vision API
Kakao Login API
부산대 맞춤법 서비스

연락처
0802dragon@naver.com"</string>
    <string name="mypage_bookmark_text1">내가 적은 글</string>
    <string name="mypage_bookmark_text3">고쳐야 할 부분</string>
    <string name="mypage_bookmark_text2">바르게 수정된 글</string>
</resources>