<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/gray"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txt_main"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="?attr/colorPrimary"
        android:gravity="center"
        android:text="@string/noText"
        android:textColor="@color/white"
        android:textSize="34sp" />

    <TextView
        android:id="@+id/textView37"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center"
        android:text="@string/quiz_popup_next_answer"
        android:textSize="34sp" />

    <TextView
        android:id="@+id/txt_answer"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="?attr/colorPrimary"
        android:gravity="center"
        android:text="@string/noText"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/txt_score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/quiz_popup_score"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/txt_score2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/quiz_popup_score2"
        android:textColor="@color/color_navigationBasic"
        android:textSize="24sp" />

    <View
        android:id="@+id/view5"
        android:layout_width="match_parent"
        android:layout_height="2dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_next"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/color_navigationBasic"
            android:gravity="center"
            android:text="@string/quiz_popup_next_next"
            android:textColor="@color/white"
            android:textSize="24sp"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/txt_end"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/color_end"
            android:gravity="center"
            android:text="@string/quiz_popup_next_end"
            android:textSize="24sp" />
    </LinearLayout>
</LinearLayout>